@@ -1,7 +1,6 @@
 package io.github.gradle.fixtures;
 
 import com.fasterxml.jackson.core.JsonParser;
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.DeserializationContext;
 import com.fasterxml.jackson.databind.JsonDeserializer;
 import com.fasterxml.jackson.databind.JsonNode;
@@ -10,20 +9,24 @@ import com.fasterxml.jackson.databind.module.SimpleModule;
 import org.gradle.caching.http.HttpBuildCache;
 import org.gradle.caching.local.DirectoryBuildCache;
 import org.gradle.testkit.runner.GradleRunner;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.io.TempDir;
 
 import java.io.BufferedReader;
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.UncheckedIOException;
 import java.net.URI;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -32,9 +35,8 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 
-public class AbstractDevelocityPluginIntegrationTest {
+public abstract class AbstractDevelocityPluginIntegrationTest {
     private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
 
     static {
@@ -42,7 +44,7 @@ public class AbstractDevelocityPluginIntegrationTest {
         // Conflict setter: setUrl(URI)/setUrl(String)
         module.addDeserializer(TestHttpBuildCache.class, new JsonDeserializer<TestHttpBuildCache>() {
             @Override
-            public TestHttpBuildCache deserialize(JsonParser p, DeserializationContext ctxt) throws IOException, JsonProcessingException {
+            public TestHttpBuildCache deserialize(JsonParser p, DeserializationContext ctxt) throws IOException {
                 TestHttpBuildCache buildCache = new TestHttpBuildCache();
 
                 JsonNode node = p.getCodec().readTree(p);
@@ -73,14 +75,13 @@ public class AbstractDevelocityPluginIntegrationTest {
     }
 
     @TempDir
-    protected File projectDir;
+    protected Path projectDir;
 
     private final LinkedHashMap<String, String> environmentVariables = new LinkedHashMap<>();
 
     private HttpBuildCache configuredRemoteCache;
     private DirectoryBuildCache configuredLocalCache;
     private DevelocityConfigurationForTest configuredDevelocity;
-    private File gradleHomeDir;
 
     @BeforeEach
     public void setUp() {
@@ -90,25 +91,33 @@ public class AbstractDevelocityPluginIntegrationTest {
     /**
      * Write content to a file, relative to project directory.
      */
-    protected File write(String relativePath, String... lines) {
+    protected Path write(String relativePath, String... lines) {
         return write(relativePath, Arrays.asList(lines));
     }
 
-    protected File write(String relativePath, List<String> lines) {
+    protected Path write(String relativePath, List<String> lines) {
         try {
             assertFalse(new File(relativePath).isAbsolute());
-            File targetFile = new File(projectDir, relativePath);
-            targetFile.getParentFile().mkdirs();
-            targetFile.createNewFile();
-
-            List<String> originalLines = new ArrayList<>(Files.readAllLines(targetFile.toPath()));
-            originalLines.addAll(lines);
-
-            Files.write(targetFile.toPath(), originalLines);
+            Path targetFile = projectDir.resolve(relativePath);
+            Files.createDirectories(targetFile.getParent());
+            StandardOpenOption openOptions = StandardOpenOption.CREATE_NEW;
+            if (Files.exists(targetFile)) {
+                openOptions = StandardOpenOption.APPEND;
+                // make sure the lines we add are on a new line by writing an empty line
+                Files.write(targetFile, Collections.emptyList(), openOptions);
+            }
+            Files.write(targetFile, lines, openOptions);
             return targetFile;
         } catch (IOException e) {
             throw new UncheckedIOException(e);
         }
+    }
+
+    protected Path subproject(String subprojectName) {
+        var subprojectDir = projectDir.resolve(subprojectName);
+        Assertions.assertDoesNotThrow(() -> Files.createDirectories(subprojectDir));
+        Assertions.assertDoesNotThrow(() -> Files.createFile(subprojectDir.resolve("build.gradle.kts")));
+        return subprojectDir;
     }
 
     protected void withEnvironmentVariable(String key, String value) {
@@ -120,8 +129,8 @@ public class AbstractDevelocityPluginIntegrationTest {
     }
 
     protected void succeeds(String... args) {
-        gradleHomeDir = new File(projectDir, "gradleHome");
-        assertTrue(gradleHomeDir.mkdirs());
+        var gradleHomeDir = projectDir.resolve("gradleHome");
+        Assertions.assertDoesNotThrow(() -> Files.createDirectories(gradleHomeDir));
 
         // Separate tasks and system properties as withJvmArguments is not public API
         // https://github.com/gradle/gradle/issues/1043
@@ -129,14 +138,13 @@ public class AbstractDevelocityPluginIntegrationTest {
         Stream.of(args).filter(s -> !s.startsWith("-D")).forEach(tasksAndArguments::add);
         tasksAndArguments.add("--stacktrace");
         tasksAndArguments.add("--info");
-        writeSystemProperties(Stream.of(args).filter(s -> s.startsWith("-D")).collect(Collectors.toList()));
+        writeSystemProperties(Stream.of(args).filter(s -> s.startsWith("-D")).toList());
 
         GradleRunner.create()
-            .withProjectDir(projectDir)
+            .withProjectDir(projectDir.toFile())
             .withEnvironment(buildEnvs())
-            .withPluginClasspath(Stream.of(System.getProperty("java.class.path").split(File.pathSeparator))
-                .map(File::new).collect(Collectors.toList()))
-            .withTestKitDir(new File(projectDir, "gradleHome"))
+            .withPluginClasspath(Stream.of(System.getProperty("java.class.path").split(File.pathSeparator)).map(File::new).toList())
+            .withTestKitDir(gradleHomeDir.toFile())
             .forwardOutput()
             .withArguments(tasksAndArguments)
             .build();
@@ -155,7 +163,7 @@ public class AbstractDevelocityPluginIntegrationTest {
         write("gradle.properties",
             systemProperties.stream()
                 .map(s -> s.replace("-D", "systemProp."))
-                .collect(Collectors.toList())
+                .toList()
         );
     }
 
@@ -165,7 +173,7 @@ public class AbstractDevelocityPluginIntegrationTest {
     protected HttpBuildCache getConfiguredRemoteCache() {
         if (configuredRemoteCache == null) {
             try {
-                String json = toString(new FileInputStream(new File(projectDir, "remoteCacheConfiguration.json")));
+                String json = Files.readString(projectDir.resolve("remoteCacheConfiguration.json"), StandardCharsets.UTF_8);
                 System.out.println("configuredRemoteCache: " + json);
                 configuredRemoteCache = OBJECT_MAPPER.readValue(json, TestHttpBuildCache.class);
             } catch (IOException e) {
@@ -181,7 +189,7 @@ public class AbstractDevelocityPluginIntegrationTest {
     protected DirectoryBuildCache getConfiguredLocalCache() {
         if (configuredLocalCache == null) {
             try {
-                String json = toString(new FileInputStream(new File(projectDir, "localCacheConfiguration.json")));
+                String json = Files.readString(projectDir.resolve("localCacheConfiguration.json"), StandardCharsets.UTF_8);
                 System.out.println("configuredLocalCache: " + json);
                 configuredLocalCache = OBJECT_MAPPER.readValue(json, TestDirectoryBuildCache.class);
             } catch (IOException e) {
@@ -194,7 +202,7 @@ public class AbstractDevelocityPluginIntegrationTest {
     protected DevelocityConfigurationForTest getConfiguredDevelocity() {
         if (configuredDevelocity == null) {
             try {
-                String json = toString(new FileInputStream(new File(projectDir, "develocityConfiguration.json")));
+                String json = Files.readString(projectDir.resolve("develocityConfiguration.json"), StandardCharsets.UTF_8);
                 System.out.println("configuredDevelocity: " + json);
                 configuredDevelocity = OBJECT_MAPPER.readValue(json, DevelocityConfigurationForTest.class);
             } catch (IOException e) {
